{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 119,
  "lineage": "095d9e7f-db53-7c50-037d-cfceb7e4625a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jumper-dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9c533fb147a2951",
            "association_id": "eipassoc-018b2c50346dbb889",
            "domain": "vpc",
            "id": "eipalloc-0d9c533fb147a2951",
            "instance": "i-0a11d2196d30fa8b0",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-06a12adef3cdcbe74",
            "private_dns": "ip-10-0-0-23.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.23",
            "public_dns": "ec2-52-79-93-230.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.79.93.230",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jumper-dmz"
            },
            "tags_all": {
              "Name": "jumper-dmz"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.jumper-dmz",
            "aws_key_pair.ec2-jumper-ssh-pub",
            "aws_security_group.sg-dmz-jumper",
            "aws_subnet.dmz-jumper-a",
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-dmz-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cb463a8f83121aa6",
            "association_id": "eipassoc-0869235677822c9e1",
            "domain": "vpc",
            "id": "eipalloc-0cb463a8f83121aa6",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0069820ae41e1fb87",
            "private_dns": "ip-10-0-1-12.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.12",
            "public_dns": "ec2-43-201-128-50.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.201.128.50",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-dmz-a"
            },
            "tags_all": {
              "Name": "nat-dmz-a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-dmz-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03910699c3c0eb3c8",
            "association_id": "eipassoc-07c652265d0a7b4e8",
            "domain": "vpc",
            "id": "eipalloc-03910699c3c0eb3c8",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-086db77fc6d33899e",
            "private_dns": "ip-10-0-1-79.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.79",
            "public_dns": "ec2-43-200-200-245.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.200.245",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-dmz-b"
            },
            "tags_all": {
              "Name": "nat-dmz-b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jumper-dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-081a36454cdf357cb",
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:instance/i-0a11d2196d30fa8b0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a11d2196d30fa8b0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-jumper-ssh-pub",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06a12adef3cdcbe74",
            "private_dns": "ip-10-0-0-23.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.23",
            "public_dns": "ec2-52-79-93-230.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.79.93.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03c898ebcbb416c61",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c14b78690e6d4d16",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b6d8e7421b6db471"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2-jumper-ssh-pub",
            "aws_security_group.sg-dmz-jumper",
            "aws_subnet.dmz-jumper-a",
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jumper-eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-081a36454cdf357cb",
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:instance/i-0f1bf081945d6c993",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jumper-eks",
            "id": "i-0f1bf081945d6c993",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jumper-eks-ssh-pub",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0911880d7e8f3738e",
            "private_dns": "ip-10-0-97-38.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.97.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-050a2d4d5a51ac4a9",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b8e87a2538e7cb49",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-044b8a05694565835",
              "sg-0ff0c73040c215f82"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.jumper-eks",
            "aws_iam_role.jumper-eks",
            "aws_key_pair.jumper-eks-ssh-pub",
            "aws_security_group.sg-private-jumper",
            "aws_subnet.private-eks-node-a",
            "aws_subnet.private-eks-node-b",
            "aws_subnet.private-jumper-a",
            "aws_vpc.monitoring-practice",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:internet-gateway/igw-03533aef00609becf",
            "id": "igw-03533aef00609becf",
            "owner_id": "474156821902",
            "tags": {
              "Name": "monitoring-practice"
            },
            "tags_all": {
              "Name": "monitoring-practice"
            },
            "vpc_id": "vpc-0dabae27134b6a00e"
          },
          "dependencies": [
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-dmz-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cb463a8f83121aa6",
            "association_id": "eipassoc-0869235677822c9e1",
            "connectivity_type": "public",
            "id": "nat-06c5c747c5ee5c02a",
            "network_interface_id": "eni-0069820ae41e1fb87",
            "private_ip": "10.0.1.12",
            "public_ip": "43.201.128.50",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-074d0f8b78e025761",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "aws_eip.nat-dmz-a",
            "aws_internet_gateway.igw",
            "aws_subnet.dmz-nat-a",
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-dmz-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03910699c3c0eb3c8",
            "association_id": "eipassoc-07c652265d0a7b4e8",
            "connectivity_type": "public",
            "id": "nat-014b7795a1e9d690a",
            "network_interface_id": "eni-086db77fc6d33899e",
            "private_ip": "10.0.1.79",
            "public_ip": "43.200.200.245",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0897ca020b15a3e00",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "aws_eip.nat-dmz-b",
            "aws_internet_gateway.igw",
            "aws_subnet.dmz-nat-b",
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:route-table/rtb-06893dfca9ea5cf1c",
            "id": "rtb-06893dfca9ea5cf1c",
            "owner_id": "474156821902",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03533aef00609becf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dmz"
            },
            "tags_all": {
              "Name": "dmz"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dabae27134b6a00e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:route-table/rtb-064e2967e62e274cf",
            "id": "rtb-064e2967e62e274cf",
            "owner_id": "474156821902",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06c5c747c5ee5c02a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dabae27134b6a00e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-dmz-a",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-dmz-a",
            "aws_subnet.dmz-nat-a",
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:route-table/rtb-09cfb419f094e45f1",
            "id": "rtb-09cfb419f094e45f1",
            "owner_id": "474156821902",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-014b7795a1e9d690a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dabae27134b6a00e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-dmz-b",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-dmz-b",
            "aws_subnet.dmz-nat-b",
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dmz-agw-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d79c74a2eeacac8f",
            "route_table_id": "rtb-06893dfca9ea5cf1c",
            "subnet_id": "subnet-012f3b17128b9ba4a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.dmz",
            "aws_subnet.dmz-agw-a",
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dmz-agw-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f573034b36676e49",
            "route_table_id": "rtb-06893dfca9ea5cf1c",
            "subnet_id": "subnet-0edc0d63a88ccb72e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.dmz",
            "aws_subnet.dmz-agw-b",
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dmz-jumper-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff77b25c2c083022",
            "route_table_id": "rtb-06893dfca9ea5cf1c",
            "subnet_id": "subnet-0c14b78690e6d4d16"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.dmz",
            "aws_subnet.dmz-jumper-a",
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dmz-jumper-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e6aa53be08d3f14",
            "route_table_id": "rtb-06893dfca9ea5cf1c",
            "subnet_id": "subnet-02f1d4d23f55123b4"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.dmz",
            "aws_subnet.dmz-jumper-b",
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dmz-nat-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1cb0478a12a5cbd",
            "route_table_id": "rtb-06893dfca9ea5cf1c",
            "subnet_id": "subnet-074d0f8b78e025761"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.dmz",
            "aws_subnet.dmz-nat-a",
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dmz-nat-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034c279ed0a5ddd8a",
            "route_table_id": "rtb-06893dfca9ea5cf1c",
            "subnet_id": "subnet-0897ca020b15a3e00"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.dmz",
            "aws_subnet.dmz-nat-b",
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-eks-node-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a325a9b27395acd",
            "route_table_id": "rtb-064e2967e62e274cf",
            "subnet_id": "subnet-022bc797e90b8a5d4"
          },
          "dependencies": [
            "aws_eip.nat-dmz-a",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-dmz-a",
            "aws_route_table.private-a",
            "aws_subnet.dmz-nat-a",
            "aws_subnet.private-eks-node-a",
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-eks-node-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e9b47adb0559a12",
            "route_table_id": "rtb-09cfb419f094e45f1",
            "subnet_id": "subnet-02e69102af1f07b8a"
          },
          "dependencies": [
            "aws_eip.nat-dmz-b",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-dmz-b",
            "aws_route_table.private-b",
            "aws_subnet.dmz-nat-b",
            "aws_subnet.private-eks-node-b",
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-jumper-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e5341c864ab9924",
            "route_table_id": "rtb-064e2967e62e274cf",
            "subnet_id": "subnet-0b8e87a2538e7cb49"
          },
          "dependencies": [
            "aws_eip.nat-dmz-a",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-dmz-a",
            "aws_route_table.private-a",
            "aws_subnet.dmz-nat-a",
            "aws_subnet.private-jumper-a",
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-jumper-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064751bbb11aefa6d",
            "route_table_id": "rtb-09cfb419f094e45f1",
            "subnet_id": "subnet-0b46feea2d1e66f57"
          },
          "dependencies": [
            "aws_eip.nat-dmz-b",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-dmz-b",
            "aws_route_table.private-b",
            "aws_subnet.dmz-nat-b",
            "aws_subnet.private-jumper-b",
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-dmz-jumper",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:security-group/sg-0b6d8e7421b6db471",
            "description": "sg-dmz-jumper",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ff0c73040c215f82"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0b6d8e7421b6db471",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dmz-jumper",
            "name_prefix": "",
            "owner_id": "474156821902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-dmz-jumper"
            },
            "tags_all": {
              "Name": "sg-dmz-jumper"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dabae27134b6a00e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-private-jumper",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:security-group/sg-0ff0c73040c215f82",
            "description": "sg-private-jumper",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0ff0c73040c215f82",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b6d8e7421b6db471"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-jumper",
            "name_prefix": "",
            "owner_id": "474156821902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dabae27134b6a00e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dmz-agw-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:subnet/subnet-012f3b17128b9ba4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012f3b17128b9ba4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "474156821902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0dabae27134b6a00e"
          },
          "dependencies": [
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dmz-agw-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:subnet/subnet-0edc0d63a88ccb72e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edc0d63a88ccb72e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "474156821902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0dabae27134b6a00e"
          },
          "dependencies": [
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dmz-jumper-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:subnet/subnet-0c14b78690e6d4d16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c14b78690e6d4d16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "474156821902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0dabae27134b6a00e"
          },
          "dependencies": [
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dmz-jumper-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:subnet/subnet-02f1d4d23f55123b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f1d4d23f55123b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "474156821902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0dabae27134b6a00e"
          },
          "dependencies": [
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dmz-nat-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:subnet/subnet-074d0f8b78e025761",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074d0f8b78e025761",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "474156821902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0dabae27134b6a00e"
          },
          "dependencies": [
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dmz-nat-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:subnet/subnet-0897ca020b15a3e00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.1.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0897ca020b15a3e00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "474156821902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0dabae27134b6a00e"
          },
          "dependencies": [
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-eks-control-plane-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:subnet/subnet-0f2cf4dbb16085cba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.96.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2cf4dbb16085cba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474156821902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0dabae27134b6a00e"
          },
          "dependencies": [
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-eks-control-plane-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:subnet/subnet-0336d7d565df3f46a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.96.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0336d7d565df3f46a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474156821902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0dabae27134b6a00e"
          },
          "dependencies": [
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-eks-node-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:subnet/subnet-022bc797e90b8a5d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.112.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022bc797e90b8a5d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474156821902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0dabae27134b6a00e"
          },
          "dependencies": [
            "aws_vpc.monitoring-practice"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-eks-node-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:subnet/subnet-02e69102af1f07b8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e69102af1f07b8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474156821902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0dabae27134b6a00e"
          },
          "dependencies": [
            "aws_vpc.monitoring-practice"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-jumper-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:subnet/subnet-0b8e87a2538e7cb49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.97.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8e87a2538e7cb49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474156821902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0dabae27134b6a00e"
          },
          "dependencies": [
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-jumper-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:subnet/subnet-0b46feea2d1e66f57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.97.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b46feea2d1e66f57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474156821902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0dabae27134b6a00e"
          },
          "dependencies": [
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "monitoring-practice",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:vpc/vpc-0dabae27134b6a00e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-025a074063f94ca46",
            "default_route_table_id": "rtb-06a865cf2386a5fd8",
            "default_security_group_id": "sg-054ad070afd6a82cb",
            "dhcp_options_id": "dopt-0234388bf5c1d5798",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dabae27134b6a00e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06a865cf2386a5fd8",
            "owner_id": "474156821902",
            "tags": {
              "Name": "monitoring-practice"
            },
            "tags_all": {
              "Name": "monitoring-practice"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg-dmz-jumper-to-sg-private-jumper",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:security-group-rule/sgr-02cbf0cbd2bd0c7ec",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-02cbf0cbd2bd0c7ec",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0ff0c73040c215f82",
            "security_group_id": "sg-0b6d8e7421b6db471",
            "security_group_rule_id": "sgr-02cbf0cbd2bd0c7ec",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-dmz-jumper",
            "aws_security_group.sg-private-jumper",
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg-private-jumper-to-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:security-group-rule/sgr-0b2061c232eca9436",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0b2061c232eca9436",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ff0c73040c215f82",
            "security_group_rule_id": "sgr-0b2061c232eca9436",
            "tags": null,
            "tags_all": {},
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-private-jumper",
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-dmz-jumper",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:security-group-rule/sgr-0f81d44a340818f82",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0f81d44a340818f82",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b6d8e7421b6db471",
            "security_group_rule_id": "sgr-0f81d44a340818f82",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-dmz-jumper",
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-dmz-jumper-to-sg-private-jumper",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:security-group-rule/sgr-06646eba9e95d7dbd",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-06646eba9e95d7dbd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0b6d8e7421b6db471",
            "security_group_id": "sg-0ff0c73040c215f82",
            "security_group_rule_id": "sgr-06646eba9e95d7dbd",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-dmz-jumper",
            "aws_security_group.sg-private-jumper",
            "aws_vpc.monitoring-practice"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:security-group/sg-02b75e2d4a200fa23",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-02b75e2d4a200fa23",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0baa77cc9aabd7aa6"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "monitoring-practice-cluster-cluster-20240311020714677000000005",
            "name_prefix": "monitoring-practice-cluster-cluster-",
            "owner_id": "474156821902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "monitoring-practice-cluster-cluster"
            },
            "tags_all": {
              "Name": "monitoring-practice-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dabae27134b6a00e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.monitoring-practice"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:474156821902:security-group/sg-0baa77cc9aabd7aa6",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0baa77cc9aabd7aa6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02b75e2d4a200fa23"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02b75e2d4a200fa23"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02b75e2d4a200fa23"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02b75e2d4a200fa23"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02b75e2d4a200fa23"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02b75e2d4a200fa23"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "monitoring-practice-cluster-node-20240311020714669600000004",
            "name_prefix": "monitoring-practice-cluster-node-",
            "owner_id": "474156821902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "monitoring-practice-cluster-node",
              "kubernetes.io/cluster/monitoring-practice-cluster": "owned"
            },
            "tags_all": {
              "Name": "monitoring-practice-cluster-node",
              "kubernetes.io/cluster/monitoring-practice-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dabae27134b6a00e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.monitoring-practice"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2127539415",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02b75e2d4a200fa23",
            "security_group_rule_id": "sgr-09876dc43f828b493",
            "self": false,
            "source_security_group_id": "sg-0baa77cc9aabd7aa6",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.monitoring-practice",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-161897290",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0baa77cc9aabd7aa6",
            "security_group_rule_id": "sgr-07bd501a8e23a8317",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.monitoring-practice",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1992098501",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0baa77cc9aabd7aa6",
            "security_group_rule_id": "sgr-0f5c1da8ee42d9ad2",
            "self": false,
            "source_security_group_id": "sg-02b75e2d4a200fa23",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.monitoring-practice",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1853386437",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0baa77cc9aabd7aa6",
            "security_group_rule_id": "sgr-0dbc6f64f83227b7a",
            "self": false,
            "source_security_group_id": "sg-02b75e2d4a200fa23",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.monitoring-practice",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1489368749",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0baa77cc9aabd7aa6",
            "security_group_rule_id": "sgr-034ff6cc9905c7ec1",
            "self": false,
            "source_security_group_id": "sg-02b75e2d4a200fa23",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.monitoring-practice",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1268370062",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0baa77cc9aabd7aa6",
            "security_group_rule_id": "sgr-0afdfa98b87bc361a",
            "self": false,
            "source_security_group_id": "sg-02b75e2d4a200fa23",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.monitoring-practice",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-792262983",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0baa77cc9aabd7aa6",
            "security_group_rule_id": "sgr-09f2deee12b48fca4",
            "self": false,
            "source_security_group_id": "sg-02b75e2d4a200fa23",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.monitoring-practice",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-908546236",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0baa77cc9aabd7aa6",
            "security_group_rule_id": "sgr-04b6db31e1a16638e",
            "self": false,
            "source_security_group_id": "sg-02b75e2d4a200fa23",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.monitoring-practice",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-957182861",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0baa77cc9aabd7aa6",
            "security_group_rule_id": "sgr-057e9556a4a6a671b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.monitoring-practice",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1819833182",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0baa77cc9aabd7aa6",
            "security_group_rule_id": "sgr-024ca1719a94016b2",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.monitoring-practice",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-936914767",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0baa77cc9aabd7aa6",
            "security_group_rule_id": "sgr-04d6823ad90ba7a86",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.monitoring-practice",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}